--- a/.gitattributes
+++ b/.gitattributes
@@ -26,3 +26,9 @@ $ mkdir ~/Dream-Capital
 $ cd ~/Dream-Capital
 $ git init
 $ touch README
+
+$ git add README
+$ git commit -m 'first commit'
+
+$ git remote add origin https://github.com/username/Dream-Capital.git
+$ git push origin master
